--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -36,7 +36,7 @@ table, th, td {
   width: 375px; }
 
 
-select {
+.az_drop {
   margin-top: 80px;
   width: 170px;
   height: 28px;
@@ -52,3 +52,20 @@ select {
 li {
   list-style: initial;
   margin-left: 15px; }
+
+.submit {
+  padding-top: 25px;
+  width: 170px;
+  height: 28px;
+  border-radius: 5px;
+  color: #555; }
+
+.os-drop {
+  width: 100px;
+  border: 0px;
+  outline: 0px;
+  background-color: #ffffff;
+  /* fallback color if gradients are not supported */
+  color: #555;
+  font-size: inherit;
+  overflow: hidden; }
